# RU-KZ-Educational-RAG-Assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/prompts/: 00_project_operating_system.md  01_big_step_planner.md  02_small_step_executor.md  03_step_report.md  04_code_review.md  05_testing_and_quality_gate.md  06_branch_and_merge_workflow.md  07_mcp_setup_planner.md  08_data_science_pipeline.md  09_rag_pipeline.md  10_qlora_pipeline.md
configs/: app.yaml  data.yaml  datasets.yaml  eda.yaml  evaluation.yaml  generation.yaml  indexing.yaml  logging.yaml  preprocessing.yaml  retrieval.yaml  retriever_baseline.yaml
docs/architecture/: data_flow.md  evaluation_design.md  rag_pipeline.md  system_design.md
docs/eda/: kazakh_retrieval_findings.md  retrieval_eda_summary.md  russian_retrieval_findings.md
docs/mcp/: mcp_config_example.md  mcp_security_rules.md  mcp_servers_plan.md
docs/project_control/: branch_strategy.md  dataset_inventory.md  definition_of_done.md  eda_plan.md  problem_formulation.md  quality_gates.md  report_template.md  rollback_plan.md  workflow.md
docs/references/: reading-list.md
docs/retrieval/: baseline_retriever_results.md  embedding_selection.md  retrieval_architecture.md  retrieval_evaluation_plan.md
notebooks/: eda_kaz_corpus_rag.ipynb  eda_ru_corpus_rag.ipynb
scripts/: build_index.py  build_retrieval_index.py  download_datasets.py  evaluate_kz_retrieval.py  run_api.py  run_eda.py  run_preprocessing.py  run_retrieval_eval.py  search_retrieval_index.py
src/rag_assistant/: __init__.py
(+65 files in other folders)
