[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rukz-educational-rag-assistant"
version = "0.1.0"
description = "LLM + RAG educational assistant for Russian and Kazakh languages."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RUKZ Educational RAG Assistant" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

